fix detail page load jump

--- a/src/media/css/detail/base.styl
+++ b/src/media/css/detail/base.styl
@@ -61,7 +61,7 @@
 @media $base-tablet {
     [data-page-type~="detail"] .detail > .placeholder > .loading {
         // Fix offset caused by not all elements being loaded.
-        margin-top: 82px;
+        margin-top: 97px;
     }
     .detail-flex-wrap {
         display: flex;
